<?xml version="1.0" encoding="UTF-8"?>
<!--

     Copyright 2022 Red Hat

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         https://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.jboss</groupId>
        <artifactId>jboss-parent</artifactId>
        <version>50</version>
    </parent>

    <groupId>org.wildfly.extras.grpc</groupId>
    <artifactId>wildfly-grpc-parent</artifactId>
    <version>0.1.12-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>WildFly gRPC :: Parent</name>
    <description>WildFly gRPC subsystem</description>
    <url>https://github.com/wildfly-extras/wildfly-grpc-feature-pack</url>
    <inceptionYear>2022</inceptionYear>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <organization>
        <name>Red Hat</name>
        <url>https://developers.redhat.com/</url>
    </organization>
    <developers>
        <developer>
            <name>Harald Pehl</name>
            <id>hpehl</id>
            <email>hpehl@redhat.com</email>
            <organization>Red Hat</organization>
            <timezone>+1</timezone>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:${repo.scm.connection}</connection>
        <developerConnection>scm:git:${repo.scm.connection}</developerConnection>
        <url>${repo.scm.url}</url>
        <tag>HEAD</tag>
    </scm>

    <issueManagement>
        <system>Github Issues</system>
        <url>https://github.com/wildfly-extras/wildfly-grpc-feature-pack/issues</url>
    </issueManagement>

    <properties>
        <!-- Dependency versions -->
        <version.arquillian.junit>1.9.1.Final</version.arquillian.junit>
        <version.checkstyle.config>1.0.8.Final</version.checkstyle.config>
        <version.grpc>1.73.0</version.grpc>
        <version.io.netty.netty>4.1.118.Final</version.io.netty.netty>
        <version.jakarta.annotation>2.1.1</version.jakarta.annotation>
        <version.junit>4.13.2</version.junit>
        <version.kotlin.stdlib>2.0.10</version.kotlin.stdlib>
        <version.okhttp>4.12.0</version.okhttp>
        <version.org.jboss.arquillian>1.8.0.Final</version.org.jboss.arquillian>
        <version.org.jboss.logging.jboss-logging-annotations>3.0.1.Final</version.org.jboss.logging.jboss-logging-annotations>
        <version.org.jboss.logging.jboss-logging>3.6.0.Final</version.org.jboss.logging.jboss-logging>
        <version.org.wildfly.arquillian>5.0.1.Final</version.org.wildfly.arquillian>
        <version.perfmark>0.27.0</version.perfmark>
        <version.proto-google-common-protos>2.60.0</version.proto-google-common-protos>
        <version.protobuf>4.31.1</version.protobuf>
        <version.wildfly.common>2.0.0</version.wildfly.common>
        <version.wildfly.core>25.0.0.Final</version.wildfly.core>
        <version.wildfly.tools>1.0.5.Final</version.wildfly.tools>
        <version.wildfly>33.0.0.Final</version.wildfly>

        <!-- Plugin versions -->
        <version.checkstyle.plugin>3.1.1</version.checkstyle.plugin>
        <version.enforcer.plugin>3.0.0-M3</version.enforcer.plugin>
        <version.formatter.plugin>2.26.0</version.formatter.plugin>
        <version.galleon.plugin>7.1.2.Final</version.galleon.plugin>
        <version.impsort.plugin>1.12.0</version.impsort.plugin>
        <version.jandex.plugin>1.2.3</version.jandex.plugin>
        <version.keepachangelog.plugin>2.1.1</version.keepachangelog.plugin>
        <version.license.plugin>4.5</version.license.plugin>
        <version.wildfly.plugin>5.0.0.Final</version.wildfly.plugin>

        <!-- Repos, URLs & protocols -->
        <maven.repository.protocol>https</maven.repository.protocol>
        <maven.repository.url>${maven.repository.protocol}://repository.jboss.org/nexus/content/groups/public/</maven.repository.url>
        <nexus.repository.release>wildfly-extras</nexus.repository.release>
        <nexus.repository.staging>wildfly-extras-staging</nexus.repository.staging>
        <nexus.staging.tag>wildfly-grpc-${project.version}</nexus.staging.tag>
        <repo.scm.connection>git@github.com:wildfly-extras/wildfly-grpc-feature-pack</repo.scm.connection>
        <repo.scm.url>https://github.com/wildfly-extras/wildfly-grpc-feature-pack</repo.scm.url>

        <!-- Build related -->
        <encoding>UTF-8</encoding>
        <galleon.fork.embedded>true</galleon.fork.embedded>
        <galleon.log.time>true</galleon.log.time>
        <galleon.wildfly.home>/tmp</galleon.wildfly.home>
        <java.version>17</java.version>
        <linkXRef>false</linkXRef>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.min.version>3.9.10</maven.min.version>
        <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
        <server.name>wildfly-${version.wildfly}-grpc-${project.version}</server.name>
        <wildfly.build.output.dir>build/target/${server.name}</wildfly.build.output.dir>
    </properties>

    <modules>
        <module>build</module>
        <module>build-config</module>
        <module>code-parent</module>
        <module>subsystem</module>
        <module>galleon-pack</module>
        <module>testsuite</module>
    </modules>

    <!-- No dependencies! Dependencies are managed in code-parent -->
    <dependencies/>

    <build>
        <!--
            All plugins are declared and (partly) configured here.
            Some of them are redefined in code-parent
        -->
        <pluginManagement>
            <plugins>
                <!-- Ordered by artifactID -->
                <plugin>
                    <groupId>net.revelc.code.formatter</groupId>
                    <artifactId>formatter-maven-plugin</artifactId>
                    <version>${version.formatter.plugin}</version>
                    <dependencies>
                        <dependency>
                            <groupId>org.wildfly.tools</groupId>
                            <artifactId>ide-config</artifactId>
                            <version>${version.wildfly.tools}</version>
                        </dependency>
                    </dependencies>
                    <configuration>
                        <cachedir>.cache</cachedir>
                        <configFile>eclipse-code-formatter.xml</configFile>
                        <configXmlFile>wildfly-xml.properties</configXmlFile>
                        <lineEnding>LF</lineEnding>
                        <includeResources>true</includeResources>
                        <removeTrailingWhitespace>true</removeTrailingWhitespace>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>com.mycila</groupId>
                    <artifactId>license-maven-plugin</artifactId>
                    <version>${version.license.plugin}</version>
                    <configuration>
                        <strictCheck>true</strictCheck>
                        <aggregate>true</aggregate>
                        <useDefaultExcludes>true</useDefaultExcludes>
                        <mapping>
                            <proto>JAVADOC_STYLE</proto>
                        </mapping>
                        <licenseSets>
                            <licenseSet>
                                <header>build-config/src/main/resources/etc/license.txt</header>
                                <excludes>
                                    <exclude>dco.txt</exclude>
                                    <exclude>**/.cache/*</exclude>
                                    <exclude>.sdkmanrc</exclude>
                                    <exclude>CODEOWNERS</exclude>
                                    <exclude>LICENSE</exclude>
                                    <exclude>**/*.adoc</exclude>
                                    <exclude>**/*license*.txt</exclude>
                                    <exclude>**/*.c?r</exclude>
                                    <exclude>**/*.cli</exclude>
                                    <exclude>**/*.keystore</exclude>
                                    <exclude>**/*.pem</exclude>
                                </excludes>
                            </licenseSet>
                        </licenseSets>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>net.revelc.code</groupId>
                    <artifactId>impsort-maven-plugin</artifactId>
                    <version>${version.impsort.plugin}</version>
                    <configuration>
                        <cachedir>.cache</cachedir>
                        <groups>java.,javax.,jakarta.,org.,com.</groups>
                        <staticGroups>*</staticGroups>
                        <removeUnused>true</removeUnused>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>co.enear.maven.plugins</groupId>
                    <artifactId>keepachangelog-maven-plugin</artifactId>
                    <version>${version.keepachangelog.plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <configuration>
                        <configLocation>wildfly-checkstyle/checkstyle.xml</configLocation>
                        <consoleOutput>true</consoleOutput>
                        <failsOnError>true</failsOnError>
                        <includeTestSourceDirectory>true</includeTestSourceDirectory>
                        <excludes>**/*$logger.java,**/*$bundle.java</excludes>
                        <useFile/>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.wildfly.checkstyle</groupId>
                            <artifactId>wildfly-checkstyle-config</artifactId>
                            <version>${version.checkstyle.config}</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <configuration>
                        <rules>
                            <bannedRepositories>
                                <message>To build this project, don't use maven repositories over HTTP. Please use HTTPS
                                    in your settings.xml or run the build with property insecure.repositories=WARN
                                </message>
                                <level>ERROR</level>
                                <bannedRepositories>
                                    <bannedRepository>http://*</bannedRepository>
                                </bannedRepositories>
                                <bannedPluginRepositories>
                                    <bannedPluginRepository>http://*</bannedPluginRepository>
                                </bannedPluginRepositories>
                            </bannedRepositories>
                            <requireMavenVersion>
                                <message>To build this project Maven ${maven.min.version} (or greater) is required.
                                    Please install it.
                                </message>
                                <version>${maven.min.version}</version>
                            </requireMavenVersion>
                            <requireJavaVersion>
                                <message>To build this project JDK ${maven.compiler.source} (or greater) is required.
                                    Please install it.
                                </message>
                                <version>${maven.compiler.source}</version>
                            </requireJavaVersion>
                        </rules>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.wildfly.galleon-plugins</groupId>
                    <artifactId>wildfly-galleon-maven-plugin</artifactId>
                    <version>${version.galleon.plugin}</version>
                    <dependencies>
                        <!--
                            feature-spec-gen uses wildfly-embedded to generate the feature specs,
                            hence the designated wildfly-embedded version must match the pack one
                        -->
                        <dependency>
                            <groupId>org.wildfly.core</groupId>
                            <artifactId>wildfly-embedded</artifactId>
                            <version>${version.wildfly.core}</version>
                        </dependency>
                        <!-- If you add a dependency on wildfly-embedded you need to bring your own transitives -->
                        <dependency>
                            <groupId>org.wildfly.common</groupId>
                            <artifactId>wildfly-common</artifactId>
                            <version>${version.wildfly.common}</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>org.wildfly.plugins</groupId>
                    <artifactId>wildfly-maven-plugin</artifactId>
                    <version>${version.wildfly.plugin}</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <!-- Ordered by artifactID -->
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>license-format</id>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>license-check</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <id>enforcer-enforce</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>quick-build</id>
            <activation>
                <property>
                    <name>quickly</name>
                </property>
            </activation>
            <properties>
                <checkstyle.skip>true</checkstyle.skip>
                <enforcer.skip>true</enforcer.skip>
                <formatter.skip>true</formatter.skip>
                <impsort.skip>true</impsort.skip>
                <license.skip>true</license.skip>
                <maven.javadoc.skip>true</maven.javadoc.skip>
                <skipITs>true</skipITs>
                <skipTests>true</skipTests>
            </properties>
            <build>
                <defaultGoal>clean install</defaultGoal>
            </build>
        </profile>
        <profile>
            <id>examples</id>
            <modules>
                <module>examples</module>
            </modules>
        </profile>
        <profile>
            <id>jdk9</id>
            <activation>
                <jdk>[9,)</jdk>
            </activation>
            <properties>
                <modular.jdk.args>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
                    --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED
                    --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
                    --add-modules=java.se
                </modular.jdk.args>
            </properties>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </snapshots>
            <id>jboss-public-repository-group</id>
            <name>JBoss Public Repository Group</name>
            <url>${maven.repository.url}</url>
            <layout>default</layout>
        </repository>
    </repositories>
</project>
